--- a/Homepage.css
+++ b/Homepage.css
@@ -14,14 +14,15 @@ body{
     width: 1000px;
     padding: 10px;
     margin-top: 20px;
+    margin-left: 25px;
 
 }
 #picture{
     height: 300px;
     width: 1000px;
     padding: 10px;
-    margin-top: 30px;
-    background-image: url("");
+    margin-top: -30px;
+    margin-left: 50px;
     opacity: .78;
 }
 #signIn{
@@ -30,6 +31,7 @@ body{
     padding: 10px;
     float: left;
     margin-top: 35px;
+    margin-left: 40px;
 }
 #logIn{
     height: 100px;
@@ -37,5 +39,6 @@ body{
     float: right;
     padding: 10px;
     margin-top: 35px;
+    margin-left: 60px;
 
 }
